# category-theory

./: Category Theory for Programmers.epub  Category Theory for Programmers.mobi  README.md
Dave/: qa.md  readme.md  scratch.md
Dave/01-the-essence-of-composition/: readme.md
Dave/02-types-and-functions/: readme.md
Dave/03-categories-great-and-small/: readme.md
Dave/04-kleisli-categories/: challenges.fsx  readme.md
Dave/05-products-and-coproducts/: challenges.fsx  readme.md
Dave/06-simple-algebraic-data-types/: challenges.fsx  readme.md
Dave/07-functors/: readme.md
Dave/08-Functoriality/: readme.md
Dave/09-function-types/: readme.md
Dave/10-natural-transformations/: readme.md
Dave/life/: readme.md
Dave/music/: readme.md
Dave/reasoning/: readme.md
Martin/01-the-essence-of-composition/: readme.md
Martin/02-types-and-functions/: Challenges02.hs  challenge-06.graffle  readme.md
Martin/03-categories-great-and-small/: Challenges03.hs  readme.md
Martin/04-kleisli-categories/: Writer.hs  readme.md
Martin/05-products-and-coproducts/: Challenges05-5.hs  Challenges05-7.hs  Challenges05.hs  readme.md
Martin/06-simple-algebraic-datatypes/: Challenges06.hs  SADTs.hs  readme.md
Martin/07-functors/: readme.md
Martin/08-functoriality/: Challenges08.hs  readme.md
Martin/09-function-types/: readme.md
Nick/: README.md
Nick/Chapter6.hsproj/: .uuid  Chapter6.cabal  Exercise1.hs  Exercise4.hs  Exercise5.hs
Nick/Memoization.hsproj/: .uuid  ArrayMemoization.hs  Fib.hs  Main.hs  Memoization.cabal  _Fib.hsplay  _Main.hsplay
Nick/Unit.hsproj/: .uuid  (+3 more)
(+21 files in other folders)
